[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certwatch"
version = "0.1.0"
description = "TLS certificate expiry monitor for the terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Unterwegs" }]
keywords = ["tls", "ssl", "certificate", "expiry", "monitoring", "cron"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = ["rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/UnterwegsDev/certwatch"
Issues = "https://github.com/UnterwegsDev/certwatch/issues"

[project.scripts]
certwatch = "certwatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/certwatch"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
